<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">WELCOME</string>
    <string name="to_my_shoe_store">TO MY SHOE STORE</string>
    <string name="_1_high_quality">We have a lot of brands</string>
    <string name="_2_1000_shoes">High Quality</string>
    <string name="_plus">+</string>
    <string name="name">Name:</string>
    <string name="company_name">Company Name:</string>
    <string name="size">Size:</string>
    <string name="description">Description:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="def_size">0.0</string>
    <string name="logout">LogOut</string>
</resources>