<?xml version="1.0" encoding="utf-8"?>
<!--I use here Linear Layout because I have only two text view , it is more efficiency to use Linear Layout -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data></data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_1_high_quality"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"

        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:text="@string/_2_1000_shoes"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="12dp"
        />
</LinearLayout>

</layout>